--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,19 @@
 {
-  "name": "Ubuntu Jammy with TypeScript, Node, Yarn, and Python",
+  "name": "Ubuntu Jammy with Python, aider, piknik",
   "image": "mcr.microsoft.com/devcontainers/base:jammy",
   "features": {
-    "ghcr.io/devcontainers/features/python:1": {},
-    "ghcr.io/devcontainers/features/conda:1": {}
+    "ghcr.io/devcontainers/features/python:1": {}
   },
   "postCreateCommand": "chmod +x .devcontainer/postCreate.sh && .devcontainer/postCreate.sh",
   "customizations": {
     "vscode": {
       "extensions": [
-        "ms-python.python"
+        "esbenp.prettier-vscode",
+        "ms-python.python",
+        "ms-toolsai.jupyter",
+        "jedisct1.piknik"
       ]
     }
   },
-  "forwardPorts": [4040]
+  "forwardPorts": [4040, 8075]
 }
